force-app/main/default/objects/Actividad__c/Actividad__c.object-meta.xml
<CustomObject>
    <label>Actividad</label>
    <nameField>
        <displayFormat>Act_{000000}</displayFormat>
        <label>Actividad Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Actividades</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>