force-app/main/default/objects/Actividad__c/fields/Activista_Actividad__c.field-meta.xml
<CustomField>
    <fullName>Activista_Actividad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activista-Actividad</label>
    <referenceTo>Activista__c</referenceTo>
    <relationshipLabel>Actividades</relationshipLabel>
    <relationshipName>ActividadesActivista</relationshipName>
    <type>Lookup</type>
</CustomField>