force-app/main/default/objects/Actividad__c/fields/Afinidad__c.field-meta.xml
<CustomField>
    <fullName>Afinidad__c</fullName>
    <label>Afinidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Candidato A</fullName>
            </value>
            <value>
                <fullName>Candidato B</fullName>
            </value>
            <value>
                <fullName>Posible ausente</fullName>
            </value>
            <value>
                <fullName>Indeciso</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>