force-app/main/default/objects/Actividad__c/fields/Cant_Votantes_Relacionados__c.field-meta.xml
<CustomField>
    <fullName>Cant_Votantes_Relacionados__c</fullName>
    <label>Cant Votantes Relacionados</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>