force-app/main/default/objects/Actividad__c/fields/Comentario_Actividad__c.field-meta.xml
<CustomField>
    <fullName>Comentario_Actividad__c</fullName>
    <label>Comentario Actividad</label>
    <type>TextArea</type>
</CustomField>