force-app/main/default/objects/Actividad__c/fields/Direccion_de_Recogida__c.field-meta.xml
<CustomField>
    <fullName>Direccion_de_Recogida__c</fullName>
    <label>Direccion de Recogida</label>
    <type>TextArea</type>
</CustomField>