force-app/main/default/objects/Actividad__c/fields/FKEY_sexo_DNI__c.field-meta.xml
<CustomField>
    <fullName>FKEY_sexo_DNI__c</fullName>
    <formula>IF( ISPICKVAL( Sexo__c , &apos;Masculino&apos;) , &apos;m&apos;, IF(ISPICKVAL( Sexo__c , &apos;Femenino&apos;),&apos;f&apos;, Null))+ DNI__c</formula>
    <label>FKEY_sexo_DNI</label>
    <type>Text</type>
</CustomField>