force-app/main/default/objects/Actividad__c/fields/guid__c.field-meta.xml
<CustomField>
    <fullName>guid__c</fullName>
    <label>Guid</label>
    <length>18</length>
    <type>Text</type>
</CustomField>