force-app/main/default/objects/Actividad__c/fields/Medio__c.field-meta.xml
<CustomField>
    <fullName>Medio__c</fullName>
    <label>Medio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Candidato</fullName>
            </value>
            <value>
                <fullName>Encuesta</fullName>
            </value>
            <value>
                <fullName>RRSS-seguidores</fullName>
            </value>
            <value>
                <fullName>RRSS-interacciones</fullName>
            </value>
            <value>
                <fullName>Llamado</fullName>
            </value>
            <value>
                <fullName>Territorio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>