force-app/main/default/objects/Actividad__c/fields/NumeracionConjuntoSameFKEY__c.field-meta.xml
<CustomField>
    <fullName>NumeracionConjuntoSameFKEY__c</fullName>
    <label>NumeracionConjuntoSameFKEY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>