force-app/main/default/objects/Actividad__c/fields/Prioridad_Formula__c.field-meta.xml
<CustomField>
    <fullName>Prioridad_Formula__c</fullName>
    <formula>CASE( Medio__c , &apos;IVR&apos;, &apos;1&apos;, &apos;SMS&apos;, &apos;2&apos;,&apos;3&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prioridad_Formula</label>
    <type>Text</type>
</CustomField>