force-app/main/default/objects/Actividad__c/fields/Traslado_Franja_Horaria__c.field-meta.xml
<CustomField>
    <fullName>Traslado_Franja_Horaria__c</fullName>
    <label>Traslado Franja Horaria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>8-11hs</fullName>
            </value>
            <value>
                <fullName>11-15hs</fullName>
            </value>
            <value>
                <fullName>15-18hs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>