force-app/main/default/objects/Actividad__c/fields/Votante_Actividad__c.field-meta.xml
<CustomField>
    <fullName>Votante_Actividad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Votante-Actividad</label>
    <referenceTo>Votante__c</referenceTo>
    <relationshipLabel>Actividades</relationshipLabel>
    <relationshipName>ActividadesVotante</relationshipName>
    <type>Lookup</type>
</CustomField>