force-app/main/default/objects/Actividad__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Activista_Actividad__c</columns>
    <columns>Votante_Actividad__c</columns>
    <columns>Etiqueta__c</columns>
    <columns>Prioridad__c</columns>
    <columns>Medio__c</columns>
    <columns>Fecha__c</columns>
    <columns>Comentario_Actividad__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
    <sharedTo>
        <group>Activismo</group>
    </sharedTo>
</ListView>